add english pages

--- a/en/gooverseas_en.html
+++ b/en/gooverseas_en.html
@@ -50,20 +50,21 @@
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">Services for Chinese Enterprise</h1>
-				<p class="breadcrumbs">
+				<p>
 <!--					<a href="gooverseas/gooverseas/go_en.html" class="btn btn-success px-3 py-3">Company Establishment</a>-->
 <!--					<a href="gooverseas/hr/hr_en.html" class="btn btn-success px-3 py-3">Talent Hunting</a>-->
 <!--					<a href="gooverseas/marketing/marketing_en.html" class="btn btn-success px-3 py-3">Marketing</a>-->
 <!--					<a href="gooverseas/admin/admin_en.html" class="btn btn-success px-3 py-3">Administrative Services</a>-->
 
-					<a class="btn btn-blue px-3 py-3">Company Establishment</a>
-					<a  class="btn btn-blue px-3 py-3">Talent Hunting</a>
-					<a  class="btn btn-blue px-3 py-3">Marketing</a>
-					<a  class="btn btn-blue px-3 py-3">Administrative Services</a>
+					<a class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Company Establishment</a>
+					<a  class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Talent Hunting</a>
+					<a  class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Marketing</a>
+					<a  class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Administrative Services</a>
 			</div>
 		</div>
 	</div>
 </section>
+
 
 
 
