--- a/en/investment_en.html
+++ b/en/investment_en.html
@@ -54,9 +54,9 @@
 <!--					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> Financial Investment</a>-->
 <!--					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> Asset Management</a>-->
 <!--					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE Insurance</a>-->
-					<a class="btn btn-info px-3 py-3"> Financial Investment</a>
-					<a class="btn btn-info px-3 py-3"> Asset Management</a>
-					<a class="btn btn-info px-3 py-3"> MAPFRE Insurance</a>
+					<a class="btn btn-success px-3 py-3" style="color: #f1f4f8"> Financial Investment</a>
+					<a class="btn btn-success px-3 py-3" style="color: #f1f4f8"> Asset Management</a>
+					<a class="btn btn-success px-3 py-3" style="color: #f1f4f8"> MAPFRE Insurance</a>
 				</p>
 			</div>
 		</div>
