--- a/es/index.html
+++ b/es/index.html
@@ -6,16 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/aos.css">
+	<link rel="stylesheet" href="../css/ionicons.min.css">
+	<link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -23,13 +23,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_es.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="index_es.html" class="nav-link pl-0">Inicio</a></li>
+				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Inicio</a></li>
 				<li class="nav-item"><a href="products_es.html" class="nav-link">Canal Expansión</a></li>
 				<li class="nav-item"><a href="ittech_es.html" class="nav-link">Tecnología Informatica para Empresa</a></li>
 				<li class="nav-item"><a href="gooverseas_es.html" class="nav-link">Servicios para Empresa China</a></li>
@@ -46,7 +46,7 @@
 					<ul class="dropdown-menu dropdown">
 						<!--						<li style="width: 100% "><a href="index.html" >简体中文</a></li>-->
 						<li style="width: 100%"><a href="index.html">简体中文</a></li>
-						<li style="width: 100%"><a href="index_en.html">English</a></li>
+						<li style="width: 100%"><a href="../en/index.html">English</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -94,7 +94,7 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="products_es.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+					<a href="products_es.html" class="block-20 d-flex align-items-end" style="background-image: url('../images/image_3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">1</span>
 						</div>
@@ -107,7 +107,7 @@
 			</div>
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="ittech_es.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+					<a href="ittech_es.html" class="block-20 d-flex align-items-end" style="background-image: url('../ittech/network/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">2</span>
 						</div>
@@ -124,7 +124,7 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="gooverseas_es.html" class="block-20 d-flex align-items-end" style="background-image: url('images/bg_10.jpg');">
+					<a href="gooverseas_es.html" class="block-20 d-flex align-items-end" style="background-image: url('../images/bg_10.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">3</span>
 						</div>
@@ -138,7 +138,7 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="investment_es.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+					<a href="investment_es.html" class="block-20 d-flex align-items-end" style="background-image: url('../images/investment.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">4</span>
 						</div>
@@ -171,7 +171,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/solventis.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/solventis.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -182,7 +182,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch align-content-center">
-							<a ><img src="images/partners/huawei.jpg"  class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/huawei.jpg"  class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -192,7 +192,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/mapfre.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/mapfre.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -203,7 +203,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch" >
 						<div class="img align-self-stretch align-content-center">
-							<a ><img src="images/partners/vivo.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/vivo.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -214,7 +214,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/hikvision.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/hikvision.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -225,7 +225,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/ruijie.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/ruijie.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -236,19 +236,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/orange.jpg" class="img-responsive-icon" ></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-
-			<div class="col-md-5 col-lg-1 ftco-animate">
-				<div class="staff">
-					<div class="img-wrap d-flex align-items-stretch">
-						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/hoenergy.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/orange.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -260,7 +248,19 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/oppo.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/hoenergy.jpg" class="img-responsive-icon" ></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
+			<div class="col-md-5 col-lg-1 ftco-animate">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
+						<div class="img align-self-stretch" >
+							<a ><img src="../images/partners/oppo.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -270,7 +270,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/xiaomi.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/xiaomi.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -280,7 +280,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/camaramadrid.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/camaramadrid.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -296,14 +296,14 @@
 		<div class="row no-gutters">
 
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_2.jpg);">
+				<a href="../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_2.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_3.jpg);">
+				<a href="../images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_3.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
@@ -311,14 +311,14 @@
 			</div>
 
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_4.jpg);">
+				<a href="../images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_4.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_1.jpg);">
+				<a href="../images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_1.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
@@ -344,7 +344,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -361,18 +361,18 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_es.html">BOI CEO Yanik estaba invitado a Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_es.html">BOI CEO Yanik estaba invitado a Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 							</div>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_es.html">BOI CEO Yanik estaba invitado a Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_es.html">BOI CEO Yanik estaba invitado a Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -386,7 +386,7 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_es.html" class="nav-link">Inicio</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
 						<li class="nav-item"><a href="products_es.html" class="nav-link">Canal Expansión</a></li>
 						<li class="nav-item"><a href="ittech_es.html" class="nav-link">Tecnología Informatica para Empresa</a></li>
 						<li class="nav-item"><a href="gooverseas_es.html" class="nav-link">Servicios para Empresa China</a></li>
@@ -406,7 +406,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -427,21 +427,21 @@
 </footer>
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
