--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--							<p style="float: right">-->
 <!--								<a href="index.html" class="text">简体中文版</a>-->
 <!--                                <a class="text">|</a>-->
-<!--								<a href="index_es.html" class="text">Español</a>-->
+<!--								<a href="index.html" class="text">Español</a>-->
 <!--							</p>-->
 <!--						</span>-->
 <!--					</span>-->
