--- a/investment.html
+++ b/investment.html
@@ -53,9 +53,9 @@
 				<h1 class="mb-2 bread">金融投资保险服务</h1>
 				<h4 class="mb-2 bread">中文、英文、西语、法语专业投资理财服务</h4>
 				<p>
-					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
-					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
-					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE保险</a>
+					<a href="investment/investment/investment_projects.html" class="btn btn-success px-4 py-3"> 金融投资项目</a>
+					<a href="investment/investment/investment_projects.html" class="btn btn-success px-4 py-3"> 资产管理</a>
+					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-success px-4 py-3"> MAPFRE保险</a>
 				</p>
 			</div>
 		</div>
