--- a/ittech.html
+++ b/ittech.html
@@ -77,11 +77,11 @@
 
 				</div>
 			</div>
-			<div class="col-md-12  wrap-about py-5 wrap-about bg-light">
-				<div  class="row wrapper align-items-stretch px-5" href="ittech/itsolution.html">
+			<div class="col-md-12  wrap-about  wrap-about bg-light py-5 ">
+				<div  class="row wrapper align-items-stretch px-3 " href="ittech/itsolution.html">
 					<img class = "wrapper" style="width: 100%" src="ittech/solution/01.jpg" href="ittech/itsolution.html">
 				</div>
-				<div  class="row wrapper align-items-stretch px-5">
+				<div  class="row wrapper align-items-stretch px-3 ">
 					<img class = "wrapper" style="width: 100%" src="ittech/solution/02.jpg" href="ittech/itsolution.html">
 				</div>
 			</div>
