--- a/products.html
+++ b/products.html
@@ -51,11 +51,11 @@
 				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>
 				<p class="breadcrumbs">
 				<p>
-					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
-					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>
-					<a href="products/security/security.html" class="btn btn-info px-4 py-3"> 安保设备</a>
-					<a href="products/solar/solar.html" class="btn btn-info px-4 py-3"> 光伏设备</a>
-					<a href="products/battery/battery.html" class="btn btn-info px-4 py-3"> 储能设备</a>
+					<a href="products/mobile/mobile.html" class="btn btn-green px-3 py-3"> 智能手机</a>
+					<a href="products/network/network.html" class="btn btn-green px-3 py-3"> 网络设备</a>
+					<a href="products/security/security.html" class="btn btn-green px-3 py-3"> 安保设备</a>
+					<a href="products/solar/solar.html" class="btn btn-green px-4 py-3"> 光伏设备</a>
+					<a href="products/battery/battery.html" class="btn btn-green px-4 py-3"> 储能设备</a>
 				</p>
 			</div>
         </div>
