--- a/en/products_en.html
+++ b/en/products_en.html
@@ -50,11 +50,11 @@
 <!--				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>-->
 				<p class="breadcrumbs">
 				<p>
-					<a class="btn btn-info px-3 py-3"> Smartphone</a>
-					<a class="btn btn-info px-3 py-3"> Network Products</h5></a>
-					<a class="btn btn-info px-3 py-3"> Security Products</a>
-					<a class="btn btn-info px-3 py-3"> Solar Products</a>
-					<a class="btn btn-info px-3 py-3"> Energy Storage Products</a>
+					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Smartphone</a>
+					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Network Products</h5></a>
+					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Security Products</a>
+					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Solar Products</a>
+					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Energy Storage Products</a>
 
 <!--					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>-->
 <!--					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>-->
@@ -136,7 +136,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a >Security Products</a></h3>
-						<p>As the first-level agent of Hikvision and Dahua, acts as an agent for security cameras and intelligent control systems</p>
+						<p>As the first-level agent of Hikvision and Dahua, acts as an agent for security cameras and intelligent control systems.</p>
 <!--						<div class="d-flex align-items-center mt-4">-->
 <!--							<p  class="mb-0"><a href="products/security/security.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--						</div>-->
