--- a/ittech/itsolution_en.html
+++ b/ittech/itsolution_en.html
@@ -21,25 +21,24 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
+		<a class="navbar-brand" href="../en/index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
-				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item active"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
-				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
-				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
-				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
-				<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
-				<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
+				<li class="nav-item"><a href="../en/index.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="../en/products_en.html" class="nav-link">Channel Expansion</a></li>
+				<li class="nav-item active"><a href="../en/ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
+				<li class="nav-item"><a href="../en/gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+				<li class="nav-item"><a href="../en/investment_en.html" class="nav-link">Investment & Insurance</a></li>
+				<li class="nav-item"><a href="../en/news_en.html" class="nav-link">News</a></li>
+				<li class="nav-item"><a href="../en/about_en.html" class="nav-link">About</a></li>
+				<li class="nav-item"><a href="../en/contact_en.html" class="nav-link">Contact</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
-
 
 
 
@@ -49,12 +48,11 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">Enterprise IT Solution</h1>
-				<p class="breadcrumbs">
+				<a href="../en/ittech_en.html"><h1 class="mb-2 bread">Enterprise IT Solution Solution</h1></a>
 				<p>
-				<a href="../ittech/cloud/cloud_en.html" class="btn btn-info px-4 py-3"> Cloud Solution</a>
-				<a href="../ittech/network/network_en.html" class="btn btn-info px-4 py-3"> Enterprise Network Solution</a>
-				<a href="../ittech/security/security_en.html" class="btn btn-info px-4 py-3"> Enterprise Security Solution</a>
+					<a class="btn btn-info px-3 py-3"> Cloud Solution</a>
+					<a  class="btn btn-info px-3 py-3"> Enterprise Network Solution</a>
+					<a  class="btn btn-info px-3 py-3"> Enterprise Security Solution</a>
 				</p>
 			</div>
 		</div>
@@ -62,100 +60,46 @@
 </section>
 
 
-<section class="ftco-section bg-light">
-	<div class="container ">
-		<div class="row no-gutters slider-text align-items-center justify-content-center">
-			<div class="col-md-12 suscribete_form text-center">
-				<div href="ittech/itsolution.html" class="py-5 px-3 text text-center align-content-center" style="background-image: url('../images/image_2.jpg');">
-
-					<h1 class="mb-2 align-self-center align-items-center" href="ittech/itsolution.html" style = "color: #f5f3f3;align-items: center">
-						Network Computing Storage Security IoT</h1>
-					<h2 class="mb-2 heading align-self-center align-items-center" >
-						<a href="../ittech/itsolution_en.html" class="heading">One Stop IT Solution, Read More...</a></h2>
-
-				</div>
-			</div>
-			<div class="col-md-12  wrap-about py-5 wrap-about bg-light">
-				<div  class="row wrapper align-items-stretch px-3 " href="ittech/itsolution.html">
-					<img class = "wrapper" style="width: 100%" src="../ittech/solution/en01.jpg" href="ittech/itsolution_en.html">
-				</div>
-				<div  class="row wrapper align-items-stretch px-3 ">
-					<img class = "wrapper" style="width: 100%" src="../ittech/solution/en02.jpg" href="ittech/itsolution_en.html">
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section>
 
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
 	<div class="container">
-		<div class = " row wrapper">
-			<div class="col-md-6 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/cloud.jpg');" a href="../ittech/cloud/cloud_en.html">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a a href="../ittech/cloud/cloud_en.html">Cloud Solution</a></h3>
-						<p>BOI as senior partner of Huawei Cloud, Orange, the tecnical team provides enterprises highest
-							quality and efficient cloud technology solutions to promote enterprises to improve efficiency</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="../ittech/cloud/cloud_en.html" class="btn btn-secondary">Read More...<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
+		<div class="row" >
+			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en03.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en04.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en05.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en06.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en07.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en08.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en09.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en10.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en11.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="solution/en12.jpg">
 				</div>
 			</div>
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/network/1.jpg');" href="../ittech/network/network_en.html" >
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="yr">2023</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="../ittech/network/network_en.html" >Enterprise Network Solution</a></h3>
-						<p>BOI as a senior partner of companies such as Huawei Enterprise Networks and Ruijie Networks,
-							the senior IT technology solution team provides enterprises with the highest quality and efficient campus network and data center solutions.</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="../ittech/network/network_en.html" class="btn btn-secondary">Read More...<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/security/1.jpg');" href="../ittech/security/security_en.html" >
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="../ittech/security/security_en.html" >Enterprise Security Solution</a></h3>
-						<p>BOI as a senior partner of Hikvision, Dahua, etc., it provides security solutions such as video surveillance,
-							recorders, and storage devices, and serves all industries with IoT perception, artificial intelligence, and big data technologies.</p>
-						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="../ittech/security/security_en.html" class="btn btn-secondary">Read More...<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
 		</div>
-
 	</div>
 </section>
-
 
 
 
@@ -164,11 +108,6 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<h2>Digitalization is the only way for enterprise development</h2>
-				<p class="mb-0">Infrastructure services to make business globally accessible</p>
-				<p class="mb-0">Technology as a service, making innovation within reach</p>
-				<p class="mb-0">Experience as a service, so that excellence can be replicated</p>
-				<br>
 				<h2>Scan QR code to contact for business negotiation</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
@@ -195,8 +134,6 @@
 		</div>
 	</div>
 </section>
-
-
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
@@ -253,14 +190,14 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
-						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
-						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
-						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
-						<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
-						<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
+						<li class="nav-item"><a href="../en/index.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="../en/products_en.html" class="nav-link">Channel Expansion</a></li>
+						<li class="nav-item"><a href="../en/ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
+						<li class="nav-item"><a href="../en/gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+						<li class="nav-item"><a href="../en/investment_en.html" class="nav-link">Investment & Insurance</a></li>
+						<li class="nav-item"><a href="../en/news_en.html" class="nav-link">News</a></li>
+						<li class="nav-item"><a href="../en/about_en.html" class="nav-link">About</a></li>
+						<li class="nav-item"><a href="../en/contact_en.html" class="nav-link">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -292,7 +229,6 @@
 		</div>
 	</div>
 </footer>
-
 
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
