change english pages

--- a/ittech/itsolution_en.html
+++ b/ittech/itsolution_en.html
@@ -50,9 +50,9 @@
 			<div class="col-md-9 ftco-animate text-center">
 				<a href="../en/ittech_en.html"><h1 class="mb-2 bread">Enterprise IT Solution Solution</h1></a>
 				<p>
-					<a class="btn btn-info px-3 py-3"> Cloud Solution</a>
-					<a  class="btn btn-info px-3 py-3"> Enterprise Network Solution</a>
-					<a  class="btn btn-info px-3 py-3"> Enterprise Security Solution</a>
+					<a class="btn btn-info px-3 py-3"  href="cloud/cloud_en.html"> Cloud Solution</a>
+					<a  class="btn btn-info px-3 py-3" href="network/network_en.html"> Enterprise Network Solution</a>
+					<a  class="btn btn-info px-3 py-3" href="security/security_en.html"> Enterprise Security Solution</a>
 				</p>
 			</div>
 		</div>
