add hr position page

--- a/en/gooverseas_en.html
+++ b/en/gooverseas_en.html
@@ -56,10 +56,10 @@
 <!--					<a href="gooverseas/marketing/marketing_en.html" class="btn btn-success px-3 py-3">Marketing</a>-->
 <!--					<a href="gooverseas/admin/admin_en.html" class="btn btn-success px-3 py-3">Administrative Services</a>-->
 
-					<a class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Company Establishment</a>
-					<a  class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Talent Hunting</a>
-					<a  class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Marketing</a>
-					<a  class="btn btn-blue px-3 py-3" style="color: #f1f4f8">Administrative Services</a>
+					<a class="btn btn-blue p-2" style="color: #f1f4f8">Company Establishment</a>
+					<a  class="btn btn-blue p-2" style="color: #f1f4f8">Talent Hunting</a>
+					<a  class="btn btn-blue p-2" style="color: #f1f4f8">Marketing</a>
+					<a  class="btn btn-blue p-2" style="color: #f1f4f8">Administrative Services</a>
 			</div>
 		</div>
 	</div>
@@ -107,9 +107,9 @@
 						<h3 class="heading"><a>Talent Hunting</a></h3>
 						<p>BOI provides Chinese-English-French-Portuguese-speaking high-end talent hunting services for Chinese-funded enterprises,
 							help enterprises find high-end talents suitable for the local business environment, and help enterprises expand the southern European market.</p>
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="gooverseas/hr/hr_en.html" class="btn btn-secondary">查看现有岗位信息详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--						</div>-->
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="../gooverseas/hr/hr_en.html" class="btn btn-secondary">Check Openings<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
 					</div>
 				</div>
 			</div>
