--- a/en/ittech_en.html
+++ b/en/ittech_en.html
@@ -52,9 +52,9 @@
 				<h1 class="mb-2 bread">Enterprise IT Solution</h1>
 				<p class="breadcrumbs">
 				<p>
-				<a href="../ittech/cloud/cloud_en.html" class="btn btn-info px-4 py-3"> Cloud Solution</a>
-				<a href="../ittech/network/network_en.html" class="btn btn-info px-4 py-3"> Enterprise Network Solution</a>
-				<a href="../ittech/security/security_en.html" class="btn btn-info px-4 py-3"> Enterprise Security Solution</a>
+				<a href="../ittech/cloud/cloud_en.html" class="btn btn-info p-2"> Cloud Solution</a>
+				<a href="../ittech/network/network_en.html" class="btn btn-info p-2"> Enterprise Network Solution</a>
+				<a href="../ittech/security/security_en.html" class="btn btn-info p-2"> Enterprise Security Solution</a>
 				</p>
 			</div>
 		</div>
