--- a/en/products_en.html
+++ b/en/products_en.html
@@ -50,11 +50,11 @@
 <!--				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>-->
 				<p class="breadcrumbs">
 				<p>
-					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Smartphone</a>
-					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Network Products</h5></a>
-					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Security Products</a>
-					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Solar Products</a>
-					<a class="btn btn-green px-3 py-3" style="color: #f1f4f8"> Energy Storage Products</a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Smartphone</a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Network Products</h5></a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Security Products</a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Solar Products</a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Energy Storage Products</a>
 
 <!--					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>-->
 <!--					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>-->
