--- a/en/index.html
+++ b/en/index.html
@@ -130,7 +130,10 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="gooverseas_en.html">Services for Chinese Enterprise</a></h3>
-						<p>Provide end-to-end services for Chinese-funded enterprises going overseas, and represent enterprises that have not gone overseas to carry out local business activities in Europe, including European local company registration, talent hunting, planning and execution of marketing activities and other related businesses.</p>
+						<p>Provide end-to-end services for Chinese-funded enterprises going overseas,
+							and represent enterprises that have not gone overseas to carry out local business activities in Europe,
+							including setup European local branch, talent hunting, planning and execution of marketing activities and other related businesses.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -144,7 +147,9 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment_en.html">Investment & Insurance</a></h3>
-						<p>BOI CEO Yanik Yang As a financial investment expert who has been working in Europe for more than 20 years, we will provide you with the best financial investment and insurance services.</p>
+						<p>BOI CEO Yanik Yang As a financial investment expert who has been working in Europe for more than 20 years,
+							and as partner of most powerful Spanish insurance company, BOI will provide the best financial investment consulting and insurance services.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -157,7 +162,7 @@
 
 <!--合作伙伴图标-->
 <section class="ftco-section ftco-no-pb">
-	<div class="container-fluid">
+	<div class="container-fluid" style="background-image:url(../images/global.jpg);">
 <!--		<div class="row">-->
 <!--			<div class="col-md-12 suscribete_form">-->
 <!--				<h1>Partners</h1>-->
@@ -279,6 +284,16 @@
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
 							<a ><img src="../images/partners/camaramadrid.jpg" class="img-responsive-icon" ></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-5 col-lg-1 ftco-animate">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
+						<div class="img align-self-stretch" >
+							<a ><img src="../images/partners/icex.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
