--- a/index.html
+++ b/index.html
@@ -464,6 +464,16 @@
 				</div>
 			</div>
 
+			<div class="col-md-5 col-lg-1 ftco-animate">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
+						<div class="img align-self-stretch" >
+							<a ><img src="images/partners/icex.jpg" class="img-responsive-icon" ></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </section>
