--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
 					<div>
 						<img src="images/consultant5.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">CTO</h3>
-						<h3>David Murillo</h3>
+						<h3>David Sanchez</h3>
 						<p>15年工作经验高级IT工程师，网络工程师、软件工程师、云解决方案架构师、系统架构师、IT产品preSale，曾任职于Telefonica、Huawei资深技术专家。</p>
 						<p></p>
 					</div>
