--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/hoenergy.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="images/partners/xfusion.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -438,7 +438,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/oppo.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="images/partners/alibaba.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
